[gd_scene load_steps=2 format=3 uid="uid://ct3156j52rnl1"]

[ext_resource type="Script" path="res://ProjectInterface/StartInfo/Packages/PackageEdit.gd" id="1_wj5ts"]

[node name="PackageEdit" type="GraphNode"]
custom_minimum_size = Vector2(500, 0)
offset_right = 500.0
offset_bottom = 55.0
title = "Package (ID)"
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
script = ExtResource("1_wj5ts")

[node name="NameType" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="VBoxContainer" parent="NameType"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="NameType/Name"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="NameType/Name"]
layout_mode = 2

[node name="Type" type="VBoxContainer" parent="NameType"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="NameType/Type"]
layout_mode = 2
text = "Type"
horizontal_alignment = 2

[node name="TypeSelect" type="OptionButton" parent="NameType/Type"]
layout_mode = 2
item_count = 3
popup/item_0/text = "Internal"
popup/item_0/id = 0
popup/item_1/text = "SWF"
popup/item_1/id = 1
popup/item_2/text = "Code"
popup/item_2/id = 2

[node name="ParentLabel" type="Label" parent="."]
layout_mode = 2

[node name="ParentSelect" type="OptionButton" parent="."]
layout_mode = 2
